force-app/main/default/objects/cgcloud__Order_Payment_Inventory_Transaction__c/cgcloud__Order_Payment_Inventory_Transaction__c.object-meta.xml
<CustomObject>
    <description>Holds the association details for the order payment template, inventory template and inventory transaction template.</description>
    <label>Order Payment Inventory Transaction</label>
    <nameField>
        <displayFormat>OPIT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Payment Inventory Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>