force-app/main/default/objects/cgcloud__Order_Payment_Inventory_Transaction__c/fields/cgcloud__Active__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active flag.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>