force-app/main/default/objects/cgcloud__Order_Payment_Inventory_Transaction__c/fields/cgcloud__Inventory_Control_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Inventory_Control_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to inventory control template.</description>
    <label>Inventory Control Template</label>
    <referenceTo>cgcloud__Inventory_Control_Template__c</referenceTo>
    <relationshipLabel>Order Payment Inventory Transactions</relationshipLabel>
    <relationshipName>Order_Payment_Inventory_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>