force-app/main/default/objects/cgcloud__Order_Payment_Inventory_Transaction__c/fields/cgcloud__Order_Payment_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Payment_Template__c</fullName>
    <description>Reference to order payment template.</description>
    <label>Order Payment Template</label>
    <referenceTo>cgcloud__Order_Payment_Template__c</referenceTo>
    <relationshipLabel>Order Payment Inventory Transactions</relationshipLabel>
    <relationshipName>Order_Payment_Inventory_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>